--- a/jsAPI.css
+++ b/jsAPI.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 .loginPopup {
+	font-family: "Open Sans", sans-serif;
 	position: absolute;
 	display: flex;
 	flex-direction: column;
