--- a/jsAPI.css
+++ b/jsAPI.css
@@ -4,7 +4,7 @@
 	font-family: "Open Sans", sans-serif;
 	font-size: 30px;
 	background: #212936;
-	color: white;
+	color: #ffffff;
 }
 
 .commandPopup {
@@ -20,54 +20,100 @@
 	bottom: 0;
 	right: 0;
 	padding: 20px;
-}
+  }
 
-.textFieldLabeled {
-	width: 360px;
+.loginMain {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	bottom: 0;
+	right: 0;
+	padding: 20px;
+  }
+
+  .textFieldLabeled {
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	/* justify-content: center; */
-	color: white;
-	font-size: 30px;
+	align-items: center;
+	color: #ffffff;
+	font-size: 25px;
 	padding: 10px;
-}
+  }
 
 .textLabel {
-	/* width: 35%; */
+	flex: 1;
+	font-weight: 700;
 	text-align: right;
-	/* padding-right: 20px; */
+	padding-right: 20px;
 }
 
 .textInput {
-	font-size: 20px;
+	flex: 2;
+	font-size: 25px;
 	padding-left: 10px;
+	width: 100%;
+	border: none;
+	border-bottom: 1px solid #ffffff;
+	background-color: transparent;
+	font-weight: 200;
+	color: #ffffff;
+	font-size: 25px;
 }
 
 .button {
-	font-size: 20px;
+	font-family: "Open Sans", sans-serif;
+	font-size: 25px;
+	color: #ffffff;
 	padding: 5px 15px;
 	margin-top: 20px;
+	border: none;
+	border-radius: 5px;
+  }
+
+.loginButton:active {
+	background-color: #80c4f9;
 }
 
-input[type=text] {
-	color: white;
-	width: 220px;
-	margin-left: 10px;
-	font-size: 30px;
-	border: none;
-	border-bottom: 1px solid white;
-	background-color: transparent;
+.loginButton {
+	background-color: #4dacf6;
+	width: 100%;
+	height: 100%;
 }
-input[type=password] {
-	color: white;
-	width: 220px;
-	margin-left: 10px;
-	font-size: 30px;
-	border: none;
-	border-bottom: 1px solid white;
-	background-color: transparent;
+  
+
+input[type="text"] {
+  	width: 220px;
+  	margin-left: 10px;
+  	border: none;
+  	border-bottom: 1px solid #ffffff;
+  	background-color: transparent;
+  	font-weight: 200;
+}
+input[type="password"] {
+  	color: #ffffff;
+  	width: 220px;
+  	margin-left: 10px;
+  	font-size: 25px;
+  	border: none;
+  	border-bottom: 1px solid #ffffff;
+  	background-color: transparent;
 }
 
 input:focus {
 	outline: none;
+	border-bottom: 1px solid #80c4f9;
+	caret-color: #80c4f9;
+}
+
+.textInput {
+	color: #ffffff;
+	font-size: 25px;
+}
+
+.settingsTextField {
+	background: #2B3D5B;
+	color: #ffffff;
+	font-size: 25px;
 }
