--- a/jsAPI.css
+++ b/jsAPI.css
@@ -7,12 +7,7 @@
 	color: #ffffff;
 }
 
-.commandPopup {
-	background: #242C3B
-}
-
-.loginPopup {
-	position: absolute;
+.popupMain {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -22,7 +17,12 @@
 	padding: 20px;
 }
 
-.popupMain {
+.commandPopup {
+	background: #242C3B
+}
+
+.loginPopup {
+	position: absolute;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -49,11 +49,17 @@
 	padding-right: 20px;
 }
 
+.simpleText {
+	flex: 1;
+	font-weight: 400;
+	text-align: left;
+	padding-right: 20px;
+}
+
 .textInput {
-	flex: 2;
+	flex: 1;
 	font-size: 25px;
 	padding-left: 10px;
-	width: 100%;
 	border: none;
 	border-bottom: 1px solid #ffffff;
 	background-color: transparent;
@@ -81,7 +87,7 @@
 	width: 100%;
 	height: 100%;
 }
-  
+
 input[type="text"] {
   	width: 220px;
   	margin-left: 10px;
