--- a/jsAPI.css
+++ b/jsAPI.css
@@ -5,6 +5,7 @@
 	font-size: 30px;
 	background: #212936;
 	color: #ffffff;
+	position: absolute;
 }
 
 .popupMain {
@@ -21,13 +22,18 @@
 }
 
 .loginPopup {
-	position: absolute;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	bottom: 0;
 	right: 0;
+}
+
+.textInputPopup {
+	margin: 0px;
+	padding: 0px;
+	display: block;
 }
 
 .textFieldLabeled {
@@ -86,17 +92,24 @@
 	height: 100%;
 }
 
+.loginPopup input[type="text"] {
+	width: 220px;
+}
+
+.loginPopup input[type="password"] {
+	width: 220px;
+}
+
 input[type="text"] {
-  	width: 220px;
   	margin-left: 10px;
   	border: none;
   	border-bottom: 1px solid #ffffff;
   	background-color: transparent;
   	font-weight: 200;
 }
+
 input[type="password"] {
   	color: #ffffff;
-  	width: 220px;
   	margin-left: 10px;
   	font-size: 25px;
   	border: none;
@@ -118,5 +131,10 @@ input:focus {
 .settingsTextField {
 	background: #2B3D5B;
 	color: #ffffff;
+	width: 100%;
 	font-size: 25px;
+	padding-bottom: 10px;
+	position: relative;
+	right: 15px;
+	bottom: 10px;
 }
