--- a/jsAPI.css
+++ b/jsAPI.css
@@ -2,7 +2,6 @@
 
 .commonPopup {
 	font-family: "Open Sans", sans-serif;
-	font-size: 30px;
 	background: #212936;
 	color: #ffffff;
 	position: absolute;
@@ -22,6 +21,7 @@
 }
 
 .loginPopup {
+	font-size: 25px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -42,7 +42,6 @@
 	justify-content: space-between;
 	align-items: center;
 	color: #ffffff;
-	font-size: 25px;
 	padding: 10px;
 }
 
@@ -62,19 +61,16 @@
 
 .textInput {
 	flex: 1;
-	font-size: 25px;
 	padding-left: 10px;
 	border: none;
 	border-bottom: 1px solid #ffffff;
 	background-color: transparent;
 	font-weight: 200;
 	color: #ffffff;
-	font-size: 25px;
 }
 
 .button {
 	font-family: "Open Sans", sans-serif;
-	font-size: 25px;
 	color: #ffffff;
 	padding: 5px 15px;
 	margin-top: 20px;
@@ -82,21 +78,28 @@
 	border-radius: 5px;
   }
 
-.loginButton:active {
-	background-color: #80c4f9;
-}
-
 .loginButton {
 	background-color: #4dacf6;
 	width: 100%;
 	height: 100%;
+	font-size: 25px;
+}
+
+.loginButton:active {
+	background-color: #80c4f9;
+}
+
+.loginButton:disabled {
+	background-color: #c0c3c4;
 }
 
 .loginPopup input[type="text"] {
+	font-size: 25px;
 	width: 220px;
 }
 
 .loginPopup input[type="password"] {
+	font-size: 25px;
 	width: 220px;
 }
 
@@ -111,7 +114,6 @@ input[type="text"] {
 input[type="password"] {
   	color: #ffffff;
   	margin-left: 10px;
-  	font-size: 25px;
   	border: none;
   	border-bottom: 1px solid #ffffff;
   	background-color: transparent;
@@ -125,14 +127,12 @@ input:focus {
 
 .textInput {
 	color: #ffffff;
-	font-size: 25px;
 }
 
 .settingsTextField {
 	background: #2B3D5B;
 	color: #ffffff;
 	width: 100%;
-	font-size: 25px;
 	padding-bottom: 10px;
 	position: relative;
 	right: 15px;
