--- a/jsAPI.css
+++ b/jsAPI.css
@@ -167,11 +167,12 @@ input:focus {
 
 #pageName {
 	position: relative;
-	bottom: 10px;
-	width: 300px;
-	font-size: 45px;	
+	bottom: 5px;
+	width: 400px;
+	font-size: 40px;	
 	height: 50%;
 	padding: 30px;
+	font-weight: 100;
 	color: #ffffff;
 	font-family: "Open Sans", sans-serif;
 }
