--- a/jsAPI.css
+++ b/jsAPI.css
@@ -165,6 +165,11 @@ input:focus {
 	height: 100%
 }
 
+.commonButton {
+	width: 100%;
+	height: 100%;
+}
+
 #pageName {
 	position: relative;
 	bottom: 5px;
