--- a/jsAPI.css
+++ b/jsAPI.css
@@ -69,28 +69,10 @@
 	color: #ffffff;
 }
 
-.button {
-	font-family: "Open Sans", sans-serif;
-	color: #ffffff;
+.loginButton {
+	font-size: 25px;
 	padding: 5px 15px;
 	margin-top: 20px;
-	border: none;
-	border-radius: 5px;
-  }
-
-.loginButton {
-	background-color: #4dacf6;
-	width: 100%;
-	height: 100%;
-	font-size: 25px;
-}
-
-.loginButton:active {
-	background-color: #80c4f9;
-}
-
-.loginButton:disabled {
-	background-color: #c0c3c4;
 }
 
 .loginPopup input[type="text"] {
@@ -166,8 +148,22 @@ input:focus {
 }
 
 .commonButton {
+	font-family: "Open Sans", sans-serif;
 	width: 100%;
 	height: 100%;
+	color: #ffffff;
+	background-color: #4dacf6;
+	border: none;
+	border-radius: 5px;
+}
+
+.commonButton:active {
+	background-color: #80c4f9;
+}
+
+.commonButton:disabled {
+	opacity: 0.75;
+	background-color: #323D52;
 }
 
 #pageName {
