--- a/jsAPI.css
+++ b/jsAPI.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 .commonPopup {
 	font-family: "Open Sans", sans-serif;
@@ -61,12 +61,13 @@
 
 .textInput {
 	flex: 1;
-	padding-left: 10px;
 	border: none;
 	border-bottom: 1px solid #ffffff;
 	background-color: transparent;
 	font-weight: 200;
 	color: #ffffff;
+	font-family: "Open Sans", sans-serif;
+	font-stretch: expanded;
 }
 
 .loginButton {
@@ -107,22 +108,18 @@ input[type="password"] {
 
 input:focus {
 	outline: none;
-	border-bottom: 1px solid #80c4f9;
+	border-bottom: 2px solid #80c4f9;
 	caret-color: #80c4f9;
-}
-
-.textInput {
-	color: #ffffff;
 }
 
 .settingsTextField {
 	background: #2B3D5B;
 	color: #ffffff;
 	width: 100%;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 	position: relative;
-	right: 15px;
-	bottom: 10px;
+	left: 1px;
+	bottom: 5px;
 }
 
 .backBar {
@@ -152,7 +149,7 @@ input:focus {
 	width: 100%;
 	height: 100%;
 	color: #ffffff;
-	background-color: #4dacf6;
+	background-color: #269af4;
 	border: none;
 	border-radius: 5px;
 }
@@ -161,9 +158,14 @@ input:focus {
 	background-color: #80c4f9;
 }
 
+.commonButton:hover {
+	background-color: #4dacf6;
+}
+
 .commonButton:disabled {
 	opacity: 0.75;
 	background-color: #323D52;
+	color: rgba(255, 255, 255, 0.5);
 }
 
 #pageName {
