--- a/jsAPI.css
+++ b/jsAPI.css
@@ -1,9 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
+/* @keyframes expand {
+  0% {
+ height: 2200px;
+  }
+  100% {
+     height: 500px;
+  }
+} */
+
+@keyframes expand {
+	0% {
+		height: var(--startHeight);
+	}
+	100% {
+		height: var(--endHeight);
+	}
+}
+
 .commonPopup {
-	font-family: "Open Sans", sans-serif;
-	background: #212936;
-	color: #ffffff;
+	font-family: "Open Sans", serif;
 	position: absolute;
 }
 
@@ -16,10 +32,6 @@
 	right: 0;
 }
 
-.commandPopup {
-	background: #242C3B
-}
-
 .loginPopup {
 	font-size: 25px;
 	display: flex;
@@ -28,6 +40,7 @@
 	justify-content: center;
 	bottom: 0;
 	right: 0;
+	animation: expand 0.5s ease-in-out;
 }
 
 .textInputPopup {
@@ -41,7 +54,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	color: #ffffff;
 	padding: 10px;
 }
 
@@ -62,12 +74,15 @@
 .textInput {
 	flex: 1;
 	border: none;
-	border-bottom: 1px solid #ffffff;
 	background-color: transparent;
 	font-weight: 200;
-	color: #ffffff;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Open Sans", serif;
 	font-stretch: expanded;
+}
+
+.stripSensorInput {
+	text-align: right;
+	padding-right: 3px;
 }
 
 .loginButton {
@@ -93,28 +108,19 @@
 input[type="text"] {
   	margin-left: 10px;
   	border: none;
-  	border-bottom: 1px solid #ffffff;
-  	background-color: transparent;
   	font-weight: 200;
 }
 
 input[type="password"] {
-  	color: #ffffff;
   	margin-left: 10px;
   	border: none;
-  	border-bottom: 1px solid #ffffff;
-  	background-color: transparent;
 }
 
 input:focus {
 	outline: none;
-	border-bottom: 2px solid #80c4f9;
-	caret-color: #80c4f9;
 }
 
 .settingsTextField {
-	background: #2B3D5B;
-	color: #ffffff;
 	width: 100%;
 	padding-bottom: 5px;
 	position: relative;
@@ -132,11 +138,9 @@ input:focus {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
-
 }
 
 .title {
-	background-color: #2B3648;
 	position: absolute;
 	display: flex;
 	align-items: center;
@@ -145,27 +149,11 @@ input:focus {
 }
 
 .commonButton {
-	font-family: "Open Sans", sans-serif;
+	font-family: "Open Sans", serif;
 	width: 100%;
 	height: 100%;
-	color: #ffffff;
-	background-color: #269af4;
 	border: none;
 	border-radius: 5px;
-}
-
-.commonButton:active {
-	background-color: #80c4f9;
-}
-
-.commonButton:hover {
-	background-color: #4dacf6;
-}
-
-.commonButton:disabled {
-	opacity: 0.75;
-	background-color: #323D52;
-	color: rgba(255, 255, 255, 0.5);
 }
 
 #pageName {
@@ -176,24 +164,17 @@ input:focus {
 	height: 50%;
 	padding: 30px;
 	font-weight: 100;
-	color: #ffffff;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Open Sans", serif;
 }
 
 #backButton {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #212936;
 	height: 40%;
 }
 
 #backArrow {
-	color: #ffffff;
 	position: relative;
 	left: 7px;
-}
-
-#backButton:hover {
-	background-color: #2B3D5B;
 }
